<resources>
    <string name="app_name">Appexercicios</string>
    <string name="btncalcular">Calcular</string>
    <string name="btnproximo">Proximo</string>
    <string name="txtcachorro">Cachorro Quente</string>
    <string name="txtpreco1">R$2.00</string>
    <string name="txtpreco2">R$2.50</string>
    <string name="txtpreco3">RS1.50</string>
    <string name="txtrefri">Refrigerante</string>
    <string name="txtsobre">Sobremesa</string>
    <string name="btncalcular2">Calcule</string>
    <string name="txtresultado2">Resultado:</string>
    <string name="txtvalor2">Digite um número:</string>
    <string name="txtresult">Valor total:</string>
    <string name="txtvalor1">Digite um número:</string>
</resources>