<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtpreco1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="270dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="572dp"
        android:text="@string/txtpreco1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtpreco2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="279dp"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="468dp"
        android:text="@string/txtpreco2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtpreco3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="279dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="364dp"
        android:text="@string/txtpreco3"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,VisualLintOverlap" />

    <TextView
        android:id="@+id/txtcachorro"
        android:layout_width="174dp"
        android:layout_height="28dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="264dp"
        android:layout_marginBottom="576dp"
        android:text="@string/txtcachorro"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <TextView
        android:id="@+id/txtrefri"
        android:layout_width="128dp"
        android:layout_height="25dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="288dp"
        android:layout_marginBottom="470dp"
        android:text="@string/txtrefri"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <TextView
        android:id="@+id/txtsobre"
        android:layout_width="119dp"
        android:layout_height="30dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="344dp"
        android:layout_marginEnd="294dp"
        android:layout_marginBottom="368dp"
        android:text="@string/txtsobre"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <EditText
        android:id="@+id/txtc"
        android:layout_width="119dp"
        android:layout_height="48dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="251dp"
        android:layout_marginBottom="515dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/txtr"
        android:layout_width="118dp"
        android:layout_height="48dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="241dp"
        android:layout_marginBottom="411dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/txts"
        android:layout_width="115dp"
        android:layout_height="51dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="251dp"
        android:layout_marginBottom="300dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btncalcular"
        android:layout_width="136dp"
        android:layout_height="53dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="539dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="139dp"
        android:onClick="btncalcular"
        android:text="@string/btncalcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.628"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtresult"
        android:layout_width="175dp"
        android:layout_height="54dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="463dp"
        android:layout_marginEnd="135dp"
        android:layout_marginBottom="214dp"
        android:text="@string/txtresult"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnproximo"
        android:layout_width="127dp"
        android:layout_height="52dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="675dp"
        android:layout_marginEnd="239dp"
        android:layout_marginBottom="4dp"
        android:onClick="btnproximo"
        android:text="@string/btnproximo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>