<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/txtresultado2"
        android:layout_width="227dp"
        android:layout_height="111dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="533dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="87dp"
        android:text="@string/txtresultado2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btncalcular2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="428dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="255dp"
        android:hint="@string/btncalcular2"
        android:onClick="btncalcular2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txtvalor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="227dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="456dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtvalor1"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#A1887F"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/txtvalor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="321dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="362dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtvalor2"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#A1887F"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints" />

    <RadioButton
        android:id="@+id/radiobtngostar"
        android:layout_width="263dp"
        android:layout_height="59dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="122dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="550dp"
        android:buttonTint="#FFFFFF"
        android:text="Está gotando do APP?"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>